Added a lot to CSS and HTML

--- a/index.html
+++ b/index.html
@@ -5,24 +5,225 @@
     <meta charset="utf-8">
     <meta  name="viewport" content="width=device-width, initial-scale=1, user-scalable=1">
     <meeta name="theme-color" content="#226DAA">
-    <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="styles copy.css">
     <link rel="icon" type="image/jpg" href="/images/image.jpg"/>
     <script src="script.js" defer></script>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
     </head>
 
 <body>
+    <aside class="side-menu">
+        <div class="menu-buttons">
+            <div class="main-buttons">
+                <div class="menu-button"><img src="images/home.svg" alt="Home" class="menuBtnImg">Home</div>
+                <div class="menu-button"><img src="images/trend.png" alt="Trending" class="menuBtnImg">Trending</div>
+                <div class="menu-button"><img src="images/subscriptions.svg" alt="Subscriptions" class="menuBtnImg">Subscriptions</div>
+            </div>
+            <div class="secondary-buttons">
+                <div class="menu-button"><img src="images/library.svg" alt="Library" class="menuBtnImg">Library</div>
+                <div class="menu-button"><img src="images/history.png" alt="History" class="menuBtnImg">History</div>
+                <div class="menu-button"><img src="images/later.png" alt="Watch later" class="menuBtnImg">Watch later</div>
+                <div class="menu-button"><img src="images/fav.png" alt="Favourites" class="menuBtnImg">Favourites</div>
+                <div class="menu-button"><img src="images/like.svg" alt="Liked videos" class="menuBtnImg">Liked videos</div>
+                <div class="menu-button"><img src="images/youtube-music.svg" alt="Music" class="menuBtnImg">Music</div>
+                <div class="menu-button"><img src="images/games.svg" alt="Games" class="menuBtnImg">Games</div>
+                <div class="menu-button"><img src="images/show-more.png" alt="Show more" class="menuBtnImg">Show more</div>
+            </div>
+        </div>
+        <div class="subs">
+            <h3 style="top: 0;">Subscriptions</h3>
+            <div class="menu-button"><img src="images/sub1.png" alt="" class="subImg">Gussie Singleton</div>
+            <div class="menu-button"><img src="images/sub2.png" alt="" class="subImg">Nora Francis</div>
+            <div class="menu-button"><img src="images/sub3.png" alt="" class="subImg">Belle Briggs</div>
+            <div class="menu-button"><img src="images/sub4.png" alt="" class="subImg">Eunice Cortez</div>
+            <div class="menu-button"><img src="images/sub5.png" alt="" class="subImg">Emma Hanson</div>
+            <div class="menu-button"><img src="images/sub6.png" alt="" class="subImg">Leah Berry</div>
+        </div>
+        <div class="menu-button"><img src="images/settings.svg" alt="" class="menuBtnImg">Settings</div>
+    </aside>
+    <header class="head-menu"> 
+        <div></div>
+    </header>
     <main>
-        <section class="videos">
         <section class="dollieBlair">
-            <img src="images/image.jpg" alt="video image">
-            <img src="images/image.jpg" alt="video image">
-            <img src="images/image.jpg" alt="video image">
+            <div class="videos">
+            <div class="yt-video">
+                <div class="video-preview">
+                    <img src="images/vid1.png" class="video-img">
+                    <time class="video-time">4:15</time>
+                </div>
+                <div class="video-description">
+                        <p class="video-title">A Brief History Of Creation</p>
+                        <p class="video-author">Dollie Blair</p>
+                        <p class="video-info">80k views  ·  3 days ago</p>
+                </div>
+            </div>
+            <div class="yt-video">
+                <div class="video-preview">
+                    <img src="images/vid2.png" class="video-img">
+                    <time class="video-time">8:00</time>
+                </div>
+                <div class="video-description">
+                        <p class="video-title">Selecting The Right Hotel</p>
+                        <p class="video-author">Dollie Blair</p>
+                        <p class="video-info">123k views  ·  1 months ago</p>
+                </div>
+            </div>
+            <div class="yt-video">
+                <div class="video-preview">
+                    <img src="images/vid3.png" class="video-img">
+                    <time class="video-time">5:32</time>
+                </div>
+                <div class="video-description">
+                        <p class="video-title">Asteroids</p>
+                        <p class="video-author">Dollie Blair</p>
+                        <p class="video-info">43k views  ·  12 days ago</p>
+                </div>
+            </div>
+            <div class="yt-video">
+                <div class="video-preview">
+                    <img src="images/vid4.png" class="video-img">
+                    <time class="video-time">6:40</time>
+                </div>
+                <div class="video-description">
+                        <p class="video-title">Telescopes 101</p>
+                        <p class="video-author">Dollie Blair</p>
+                        <p class="video-info">11k views  ·  6 months ago</p>
+                </div>
+            </div>
+            <div class="yt-video">
+                <div class="video-preview">
+                    <img src="images/vid5.png" class="video-img">
+                    <time class="video-time">2:12</time>
+                </div>
+                <div class="video-description">
+                        <p class="video-title">Medical Care Is Just</p>
+                        <p class="video-author">Dollie Blair</p>
+                        <p class="video-info">18k views  ·  2 days ago</p>
+                </div>
+            </div>
+            <div class="yt-video">
+                <div class="video-preview">
+                    <img src="images/vid6.png" class="video-img">
+                    <time class="video-time">4:15</time>
+                </div>
+                <div class="video-description">
+                        <p class="video-title">Moon Gazing</p>
+                        <p class="video-author">Dollie Blair</p>
+                        <p class="video-info">67k views  ·  4 months ago</p>
+                </div>
 
+            </div>
+            </div>
         </section>
         <section class="recommended">
+            <div class="videos">
+            <div class="yt-video">
+                <div class="video-preview">
+                    <img src="images/rec1.png" class="video-img">
+                    <time class="video-time">4:15</time>
+                </div>
+                <div class="video-description">
+                        <p class="video-title">Dude You Re Getting A Telescope</p>
+                        <p class="video-author">Gussie French</p>
+                        <p class="video-info">34k views  ·  5 months ago</p>
+                </div>
+            </div>
+            <div class="yt-video">
+                <div class="video-preview">
+                    <img src="images/rec2.png" class="video-img">
+                    <time class="video-time">4:15</time>
+                </div>
+                <div class="video-description">
+                        <p class="video-title">Moon Gazing</p>
+                        <p class="video-author">Edward Osborne</p>
+                        <p class="video-info">54k views  ·  11 months ago</p>
+                </div>
+            </div>
+            <div class="yt-video">
+                <div class="video-preview">
+                    <img src="images/rec3.png" class="video-img">
+                    <time class="video-time">4:15</time>
+                </div>
+                <div class="video-description">
+                        <p class="video-title">Moon Gazing</p>
+                        <p class="video-author">Dollie Blair</p>
+                        <p class="video-info">125k views  ·  4 months ago</p>
+                </div>
+            </div>
+            </div>
         </section>
         <section class="foodAndDrinks">
-        </section>
+            <div class="videos">
+            <div class="yt-video">
+                <div class="video-preview">
+                    <img src="images/vid1.png" class="video-img">
+                    <time class="video-time">4:15</time>
+                </div>
+                <div class="video-description">
+                        <p class="video-title">A Brief History Of Creation</p>
+                        <p class="video-author">Dollie Blair</p>
+                        <p class="video-info">80k views  ·  3 days ago</p>
+                </div>
+            </div>
+            <div class="yt-video">
+                <div class="video-preview">
+                    <img src="images/vid2.png" class="video-img">
+                    <time class="video-time">8:00</time>
+                </div>
+                <div class="video-description">
+                        <p class="video-title">Selecting The Right Hotel</p>
+                        <p class="video-author">Dollie Blair</p>
+                        <p class="video-info">123k views  ·  1 months ago</p>
+                </div>
+            </div>
+            <div class="yt-video">
+                <div class="video-preview">
+                    <img src="images/vid3.png" class="video-img">
+                    <time class="video-time">5:32</time>
+                </div>
+                <div class="video-description">
+                        <p class="video-title">Asteroids</p>
+                        <p class="video-author">Dollie Blair</p>
+                        <p class="video-info">43k views  ·  12 days ago</p>
+                </div>
+            </div>
+            <div class="yt-video">
+                <div class="video-preview">
+                    <img src="images/vid4.png" class="video-img">
+                    <time class="video-time">6:40</time>
+                </div>
+                <div class="video-description">
+                        <p class="video-title">Telescopes 101</p>
+                        <p class="video-author">Dollie Blair</p>
+                        <p class="video-info">11k views  ·  6 months ago</p>
+                </div>
+            </div>
+            <div class="yt-video">
+                <div class="video-preview">
+                    <img src="images/vid5.png" class="video-img">
+                    <time class="video-time">2:12</time>
+                </div>
+                <div class="video-description">
+                        <p class="video-title">Medical Care Is Just</p>
+                        <p class="video-author">Dollie Blair</p>
+                        <p class="video-info">18k views  ·  2 days ago</p>
+                </div>
+            </div>
+            <div class="yt-video">
+                <div class="video-preview">
+                    <img src="images/vid6.png" class="video-img">
+                    <time class="video-time">4:15</time>
+                </div>
+                <div class="video-description">
+                        <p class="video-title">Moon Gazing</p>
+                        <p class="video-author">Dollie Blair</p>
+                        <p class="video-info">67k views  ·  4 months ago</p>
+                </div>
+            </div>
+            </div>
         </section>
     </main>
 </body>
