--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="utf-8">
     <meta  name="viewport" content="width=device-width, initial-scale=1, user-scalable=1">
     <meeta name="theme-color" content="#226DAA">
-    <link rel="stylesheet" href="styles copy.css">
+    <link rel="stylesheet" href="style.css">
     <link rel="icon" type="image/jpg" href="/images/image.jpg"/>
     <script src="script.js" defer></script>
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -17,39 +17,58 @@
     <aside class="side-menu">
         <div class="menu-buttons">
             <div class="main-buttons">
-                <div class="menu-button"><img src="images/home.svg" alt="Home" class="menuBtnImg">Home</div>
-                <div class="menu-button"><img src="images/trend.png" alt="Trending" class="menuBtnImg">Trending</div>
-                <div class="menu-button"><img src="images/subscriptions.svg" alt="Subscriptions" class="menuBtnImg">Subscriptions</div>
+                <button class="menu-button"><img src="images/home.svg" alt="Home" class="menuBtnImg">Home</button>
+                <button class="menu-button"><img src="images/trend.png" alt="Trending" class="menuBtnImg">Trending</button>
+                <button class="menu-button"><img src="images/subscriptions.svg" alt="Subscriptions" class="menuBtnImg">Subscriptions</button>
             </div>
             <div class="secondary-buttons">
-                <div class="menu-button"><img src="images/library.svg" alt="Library" class="menuBtnImg">Library</div>
-                <div class="menu-button"><img src="images/history.png" alt="History" class="menuBtnImg">History</div>
-                <div class="menu-button"><img src="images/later.png" alt="Watch later" class="menuBtnImg">Watch later</div>
-                <div class="menu-button"><img src="images/fav.png" alt="Favourites" class="menuBtnImg">Favourites</div>
-                <div class="menu-button"><img src="images/like.svg" alt="Liked videos" class="menuBtnImg">Liked videos</div>
-                <div class="menu-button"><img src="images/youtube-music.svg" alt="Music" class="menuBtnImg">Music</div>
-                <div class="menu-button"><img src="images/games.svg" alt="Games" class="menuBtnImg">Games</div>
-                <div class="menu-button"><img src="images/show-more.png" alt="Show more" class="menuBtnImg">Show more</div>
+                <button class="menu-button"><img src="images/library.svg" alt="Library" class="menuBtnImg">Library</button>
+                <button class="menu-button"><img src="images/history.png" alt="History" class="menuBtnImg">History</button>
+                <button class="menu-button"><img src="images/later.png" alt="Watch later" class="menuBtnImg">Watch later</button>
+                <button class="menu-button"><img src="images/fav.png" alt="Favourites" class="menuBtnImg">Favourites</button>
+                <button class="menu-button"><img src="images/like.svg" alt="Liked videos" class="menuBtnImg">Liked videos</button>
+                <button class="menu-button"><img src="images/youtube-music.svg" alt="Music" class="menuBtnImg">Music</button>
+                <button class="menu-button"><img src="images/games.svg" alt="Games" class="menuBtnImg">Games</button>
+                <button class="menu-button"><img src="images/show-more.png" alt="Show more" class="menuBtnImg">Show more</button>
             </div>
         </div>
         <div class="subs">
             <h3 style="top: 0;">Subscriptions</h3>
-            <div class="menu-button"><img src="images/sub1.png" alt="" class="subImg">Gussie Singleton</div>
-            <div class="menu-button"><img src="images/sub2.png" alt="" class="subImg">Nora Francis</div>
-            <div class="menu-button"><img src="images/sub3.png" alt="" class="subImg">Belle Briggs</div>
-            <div class="menu-button"><img src="images/sub4.png" alt="" class="subImg">Eunice Cortez</div>
-            <div class="menu-button"><img src="images/sub5.png" alt="" class="subImg">Emma Hanson</div>
-            <div class="menu-button"><img src="images/sub6.png" alt="" class="subImg">Leah Berry</div>
+            <button class="menu-button"><img src="images/sub1.png" alt="" class="subImg">Gussie Singleton</button>
+            <button class="menu-button"><img src="images/sub2.png" alt="" class="subImg">Nora Francis</button>
+            <button class="menu-button"><img src="images/sub3.png" alt="" class="subImg">Belle Briggs</button>
+            <button class="menu-button"><img src="images/sub4.png" alt="" class="subImg">Eunice Cortez</button>
+            <button class="menu-button"><img src="images/sub5.png" alt="" class="subImg">Emma Hanson</button>
+            <button class="menu-button"><img src="images/sub6.png" alt="" class="subImg">Leah Berry</button>
         </div>
-        <div class="menu-button"><img src="images/settings.svg" alt="" class="menuBtnImg">Settings</div>
+        <button class="menu-button"><img src="images/settings.svg" alt="" class="menuBtnImg">Settings</button>
     </aside>
     <header class="head-menu"> 
-        <div></div>
+    <div>
+        <button class="burger-button"><img src="images/hamburger-menu.svg"></button>
+        <button class="youtube-logo"><img src="images/youtube-logo.svg"></button>
+    </div>
+    <div class="search-section">
+        <input class="searchbar" placeholder="Search">
+        <img src="images/search.svg" alt="search">
+    </div>    
+    <div class="right-section">
+        <button class="burger-button"><img src="images/upload.svg"></button>
+        <button class="burger-button"><img src="images/youtube-apps.svg"></button>
+        <button class="notification"><img src="images/notifications.svg"><p class="notification-count">3</p></button>
+        <button class="burger-button"><img src="images/profile.png" id="profile-picture"></button>
+    </div>
     </header>
     <main>
         <section class="dollieBlair">
+            <div class="video-header">
+                <img src="images/sub6.png" alt="dollieBlair" class="channelIcon">
+                <p>Dollie Blair</p>
+                <button class="scroll-button-left">&#8249;</button>
+                <button class="scroll-button-right">&#8250;</button>
+            </div>
             <div class="videos">
-            <div class="yt-video">
+            <div class="yt-video" tabindex="0">
                 <div class="video-preview">
                     <img src="images/vid1.png" class="video-img">
                     <time class="video-time">4:15</time>
@@ -60,7 +79,7 @@
                         <p class="video-info">80k views  ·  3 days ago</p>
                 </div>
             </div>
-            <div class="yt-video">
+            <div class="yt-video" tabindex="0">
                 <div class="video-preview">
                     <img src="images/vid2.png" class="video-img">
                     <time class="video-time">8:00</time>
@@ -71,7 +90,7 @@
                         <p class="video-info">123k views  ·  1 months ago</p>
                 </div>
             </div>
-            <div class="yt-video">
+            <div class="yt-video" tabindex="0">
                 <div class="video-preview">
                     <img src="images/vid3.png" class="video-img">
                     <time class="video-time">5:32</time>
@@ -82,7 +101,7 @@
                         <p class="video-info">43k views  ·  12 days ago</p>
                 </div>
             </div>
-            <div class="yt-video">
+            <div class="yt-video" tabindex="0">
                 <div class="video-preview">
                     <img src="images/vid4.png" class="video-img">
                     <time class="video-time">6:40</time>
@@ -93,7 +112,7 @@
                         <p class="video-info">11k views  ·  6 months ago</p>
                 </div>
             </div>
-            <div class="yt-video">
+            <div class="yt-video" tabindex="0">
                 <div class="video-preview">
                     <img src="images/vid5.png" class="video-img">
                     <time class="video-time">2:12</time>
@@ -104,7 +123,7 @@
                         <p class="video-info">18k views  ·  2 days ago</p>
                 </div>
             </div>
-            <div class="yt-video">
+            <div class="yt-video" tabindex="0">
                 <div class="video-preview">
                     <img src="images/vid6.png" class="video-img">
                     <time class="video-time">4:15</time>
@@ -119,8 +138,13 @@
             </div>
         </section>
         <section class="recommended">
+            <div class="video-header">
+                <p>Recommended</p>
+                <button class="scroll-button-left">&#8249;</button>
+                <button class="scroll-button-right">&#8250;</button>
+            </div>
             <div class="videos">
-            <div class="yt-video">
+            <div class="yt-video" tabindex="0">
                 <div class="video-preview">
                     <img src="images/rec1.png" class="video-img">
                     <time class="video-time">4:15</time>
@@ -131,7 +155,7 @@
                         <p class="video-info">34k views  ·  5 months ago</p>
                 </div>
             </div>
-            <div class="yt-video">
+            <div class="yt-video" tabindex="0">
                 <div class="video-preview">
                     <img src="images/rec2.png" class="video-img">
                     <time class="video-time">4:15</time>
@@ -142,7 +166,7 @@
                         <p class="video-info">54k views  ·  11 months ago</p>
                 </div>
             </div>
-            <div class="yt-video">
+            <div class="yt-video" tabindex="0">
                 <div class="video-preview">
                     <img src="images/rec3.png" class="video-img">
                     <time class="video-time">4:15</time>
@@ -156,10 +180,17 @@
             </div>
         </section>
         <section class="foodAndDrinks">
+            <div class="video-header">
+                <img src="images/foodAndDrinks.png" alt="dollieBlair" class="channelIcon">
+                <p>Food & Drinks</p>
+                <p class="recommendedChannelP">Recommended channel for you</p>
+                <button class="scroll-button-left">&#8249;</button>
+                <button class="scroll-button-right">&#8250;</button>
+            </div>
             <div class="videos">
-            <div class="yt-video">
+            <div class="yt-video" tabindex="0">
                 <div class="video-preview">
-                    <img src="images/vid1.png" class="video-img">
+                    <img src="images/food1.png" class="video-img">
                     <time class="video-time">4:15</time>
                 </div>
                 <div class="video-description">
@@ -168,9 +199,9 @@
                         <p class="video-info">80k views  ·  3 days ago</p>
                 </div>
             </div>
-            <div class="yt-video">
+            <div class="yt-video" tabindex="0">
                 <div class="video-preview">
-                    <img src="images/vid2.png" class="video-img">
+                    <img src="images/food2.png" class="video-img">
                     <time class="video-time">8:00</time>
                 </div>
                 <div class="video-description">
@@ -179,9 +210,9 @@
                         <p class="video-info">123k views  ·  1 months ago</p>
                 </div>
             </div>
-            <div class="yt-video">
+            <div class="yt-video" tabindex="0">
                 <div class="video-preview">
-                    <img src="images/vid3.png" class="video-img">
+                    <img src="images/food3.png" class="video-img">
                     <time class="video-time">5:32</time>
                 </div>
                 <div class="video-description">
@@ -190,9 +221,9 @@
                         <p class="video-info">43k views  ·  12 days ago</p>
                 </div>
             </div>
-            <div class="yt-video">
+            <div class="yt-video" tabindex="0">
                 <div class="video-preview">
-                    <img src="images/vid4.png" class="video-img">
+                    <img src="images/food4.png" class="video-img">
                     <time class="video-time">6:40</time>
                 </div>
                 <div class="video-description">
@@ -201,9 +232,9 @@
                         <p class="video-info">11k views  ·  6 months ago</p>
                 </div>
             </div>
-            <div class="yt-video">
+            <div class="yt-video" tabindex="0">
                 <div class="video-preview">
-                    <img src="images/vid5.png" class="video-img">
+                    <img src="images/food5.png" class="video-img">
                     <time class="video-time">2:12</time>
                 </div>
                 <div class="video-description">
@@ -212,9 +243,9 @@
                         <p class="video-info">18k views  ·  2 days ago</p>
                 </div>
             </div>
-            <div class="yt-video">
+            <div class="yt-video" tabindex="0">
                 <div class="video-preview">
-                    <img src="images/vid6.png" class="video-img">
+                    <img src="images/food6.png" class="video-img">
                     <time class="video-time">4:15</time>
                 </div>
                 <div class="video-description">
